--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "final-project-team5-back",
+  "name": "final-project-back",
   "version": "0.0.1",
   "private": true,
   "scripts": {
