some added files

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,6 @@ GOOGLE_CLIENT_SECRET=<insert google client secret key>
 BASE_URL=<insert URL to back-end>
 FRONTEND_URL=<insert URL to front-end>
 SENDGRID_API_KEY=<insert secret key>
+CLOUDINARY_NAME=<insert cloud_name>
+CLOUDINARY_KEY=<insert api_key>
+CLOUDINARY_SECRET=<insert api_secret>
