--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.35.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
@@ -23,6 +24,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.1",
     "query-string": "^8.1.0",
     "sendgrid": "^5.2.3",
