--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ ACCESS_SECRET_KEY=jhuvsdfjhvjhasvd651dsfvbdf651
 REFRESH_SECRET_KEY=ascsa615a1d6b516a1dfb651ad651fbadfb
 BASE_URL=<insert URL to back-end>
 FRONTEND_URL=<insert URL to front-end>
+CLOUDINARY_NAME=duueggctj
+CLOUDINARY_KEY=599641316751176
+CLOUDINARY_SECRET=l4TR45YfqKmM-XLTkkaWiRxX2rs
