--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_HOST_URI=mongodb+srv://admin:vTAoAaxp0Obq9P8E@petly.hofegc9.mongodb.net/?retryWrites=true&w=majority
-# MONGODB_HOST_URI=mongodb+srv://Petly:ParolPETLY@petly.xgzukpp.mongodb.net/?retryWrites=true&w=majority
+# MONGODB_HOST_URI=mongodb+srv://admin:vTAoAaxp0Obq9P8E@petly.hofegc9.mongodb.net/?retryWrites=true&w=majority
+MONGODB_HOST_URI=mongodb+srv://Petly:ParolPETLY@petly.xgzukpp.mongodb.net/?retryWrites=true&w=majority
 ACCESS_SECRET_KEY=jhuvsdfjhvjhasvd651dsfvbdf651
 REFRESH_SECRET_KEY=ascsa615a1d6b516a1dfb651ad651fbadfb
 BASE_URL=<insert URL to back-end>
